# orcheval

./: README.md  pyproject.toml
Docs/: technical.md
generated_workflows_proof/airflow_ops_mix/airflow/template/orcheval_reports/: pipeline.py.pct_airflow.json  pipeline.py.smoke_airflow.json  pipeline.unified_airflow_20260310_233112.json  pipeline.unified_airflow_20260312_232212.json  synthetic_recipes.json
src/orcheval/: __init__.py  cli.py  dag_comparator.py  enhanced_static_analyzer.py  import_smoke_test_cli.py  knowledge_pack.py  knowledge_pack_updater.py  subprocess_json_runner.py  unified_evaluator.py
src/orcheval/energy/: __init__.py  carbon_tracker.py  design_rules.py  runtime_evaluation.py  runtime_runner_cli.py  structural_energy_analyzer.py
src/orcheval/knowledge_packs/: default_pack_v1.json
src/orcheval/platform_compliance/: airflow_compliance.py  base_compliance.py  dagster_compliance.py  pct_base.py  pct_cli.py  prefect_compliance.py
tests/: test_knowledge_pack_runtime.py  test_runtime_evaluation.py
